--- a/configure.in
+++ b/configure.in
@@ -44,6 +44,7 @@ dnl MfGames.Utility
 PKG_CHECK_MODULES(mfgames_input, mfgames-input-3.0)
 PKG_CHECK_MODULES(mfgames_utility, mfgames-utility-3.0)
 PKG_CHECK_MODULES(mfgames_sprite3_works, mfgames-sprite3-works-0.0)
+PKG_CHECK_MODULES(mfgames_sprite3_boogamebe, mfgames-sprite3-boogamebe-0.0)
 
 dnl BooGame
 PKG_CHECK_MODULES(boogame, boogame-2.0)
