Adding the modules, making changes, fun stuff.

--- a/Makefile.am
+++ b/Makefile.am
@@ -14,8 +14,10 @@ mfgames_runningbomb_FILES =  \
 	MfGames.RunningBomb/Draw/DrawingCommandsReader.cs \
 	MfGames.RunningBomb/Physics.cs \
 	MfGames.RunningBomb/Mobile.cs \
-	MfGames.RunningBomb/MobileBubble.cs \
 	MfGames.RunningBomb/HousingBubble.cs \
+	MfGames.RunningBomb/EngineModule.cs \
+	MfGames.RunningBomb/ContainmentModule.cs \
+	MfGames.RunningBomb/ModuleJoint.cs \
 	MfGames.RunningBomb/Module.cs \
 	MfGames.RunningBomb/IClutterFactory.cs \
 	MfGames.RunningBomb/SimpleClutterFactory.cs \
